# xori

./: Cargo.toml  README.md
src/: backend.rs  builder.rs  changes.rs  engine.rs  entity.rs  lib.rs  snapshot.rs
src/backend/: column.rs  memory.rs  rocksdb.rs
src/dag/: error.rs  mod.rs
src/engine/: error.rs  iterator.rs
src/entity/: read.rs  write.rs
src/serde/: bytes.rs  mod.rs  reader.rs  varint.rs  writable.rs  writer.rs
src/serde/default/: mod.rs
src/types/: entity.rs  key.rs  mod.rs  version.rs
