[package]
name = "xori"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
dashmap = "5"
anyhow = "1.0.102"
bytes = "1.11.1"
itertools = "0.14.0"
indexmap = "2.13.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
