[package]
name = "xori"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
futures = "0.3"
anyhow = "1.0.102"
bytes = "1.11.1"
itertools = "0.14.0"
indexmap = "2.13.0"
rocksdb = { version = "0.21", optional = true }

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"

